...
                                                        <rect key="frame" x="0.0" y="0.0" width="345" height="45"/>
                                                        <color key="backgroundColor" red="0.67843137254901964" green="0.82352941176470584" blue="0.78823529411764703" alpha="0.75" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <state key="normal" image="ChangeCurrency"/>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
...
                                                <color key="backgroundColor" red="0.36862745098039218" green="0.63921568627450975" blue="0.63921568627450975" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
                                                <state key="normal" title="Convert">
                                                    <color key="titleColor" red="0.28235294117647058" green="0.54509803921568623" blue="0.5607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                        </connections>
                    </view>
                    <tabBarItem key="tabBarItem" title="Exchange" image="Exchange" id="OxW-Jk-oNx"/>
                    <connections>
                        <outlet property="activityIndicator" destination="sLE-W1-DXa" id="Qr1-Fi-2hn"/>
...
                                                <color key="backgroundColor" red="0.36862745098039218" green="0.63921568627450975" blue="0.63921568627450975" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                                <state key="normal" title="Translate">
                                                    <color key="titleColor" red="0.28235294117647058" green="0.54509803921568623" blue="0.5607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                        </connections>
                    </view>
                    <tabBarItem key="tabBarItem" title="Translator" image="Translator" id="QdD-TZ-y5t"/>
                    <connections>
                        <outlet property="activityIndicator" destination="gi4-w4-9RR" id="tlg-XE-VeD"/>
...
                        <viewLayoutGuide key="safeArea" id="yBO-kf-6kW"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Forecast" image="Forecast" id="bGm-5O-jG2"/>
                    <connections>
                        <outlet property="activityIndicator" destination="1wt-5q-CTB" id="cAp-qk-ceb"/>
...
