...
    bottomImage.image = UIImage(named: with.weatherCondition)
  }

  // Show alert in case data can not be retrieve from network
  func presentAlert() {
    let alertVC = UIAlertController(
      title: "Error",
      message: "Sorry, there was an error loading data",
      preferredStyle: .alert)
    alertVC.addAction(UIAlertAction(
      title: "OK", style: .cancel, handler: nil))
    present(alertVC, animated: true, completion: nil)
  }

  // Handle error if there are no coordianates found
  func locationManager(_ manager: CLLocationManager, didFailWithError error: Error) {
    print(error)
...
